--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "src/*":["src/*"]
+      "src/*": [
+        "src/*"
+      ]
     },
     "module": "ES2015",
     "noImplicitAny": true,
@@ -12,9 +14,13 @@
     "outDir": "./dist",
     "allowJs": false,
     "moduleResolution": "node",
-    "declaration":true,
+    "declaration": true,
     "esModuleInterop": true,
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules/**/*"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules/**/*"
+  ]
 }
